# food_tracker

./: .gitignore  AUTHORS  Makefile.am  NEWS  README.md  configure.ac  do_all_in_one_step.sh
Documentation/: Makefile.am  README.md  example_db.csv
etc/: Makefile.am  food_tracker.conf
lib/: Makefile.am  food_tracker.c  libservice.h
man/: Makefile.am  food_tracker.1
po/: Makevars  POTFILES.in  de.po
src/: .gitignore  Makefile.am  common.h  gui.c  main.c
